--- a/0 - Vue/index.html
+++ b/0 - Vue/index.html
@@ -7,6 +7,7 @@
     <div id="app">
       <h2>{{ greeting }}</h2>
       <p>by {{ user }} who lives in {{ city }}</p>
+      <button @click='changeGreeting'>Change Greeting</button>
     </div>
     <script src="https://unpkg.com/vue"></script>
     <script src="./main.js"></script>
